--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,10 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
+#PyDev project settings
+.project
+.pydevproject
+
 # mkdocs documentation
 /site
 
